tests/baselines/reference/computedPropertyNames43_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames43_ES5.ts(10,9): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames43_ES5.ts(11,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames43_ES5.ts (2 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: Foo2;
    }
    
    class D extends C {
        // Computed properties
        get ["get1"]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
        set ["set1"](p: Foo2) { }
            ~~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }